<resources>
    <string name="app_name">Sport Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_track">Track</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="finish_track">Finish</string>
    <string name="init_timer">00:00:00:00</string>
    <string name="height">Height (cm)</string>
    <string name="compass_image">Compass Image</string>
    <string name="save">Save</string>
    <string name="noSchedule">Click on the button below to create your schedule!</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="reminder_name_label">Name:</string>
    <string name="reminder_name_hint">Enter Name of Schedule</string>
    <string name="frequency">Frequency:</string>
    <string name="reminder_type">Type:</string>
    <string name="select_days">Select Days</string>
    <string name="set_time">Set Time</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="more_details">More Details</string>
    <string name="additional_details">Enter Additional Details</string>
    <string name="fill_the_name">Please Fill Name</string>
    <string name="fill_at_least_one_day">Please Fill At Least One Day</string>
    <string name="fill_pick_date_and_time">Please Pick Date and Time</string>
    <string name="fill_pick_time">Please Pick Time</string>
    <string name="time_not_set">Time not set</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="one_time_frequency_display">On %d %s %d&#160;</string>
    <string name="daily_frequency_display">"Every "</string>
    <string name="weekly_frequency_display">%d day(s) Every Week&#160;</string>
    <string name="at_time">at %s&#160;</string>
    <string name="undo">Undo</string>
    <string name="delete_schedule">Schedule Deleted</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">API_KEY</string>
</resources>