<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/reminder_action_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@id/save_button"
            android:paddingTop="16dp"
            android:text="@string/add_schedule"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:background="@color/teal_700"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_action_label"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:drawablePadding="8dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/reminder_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tip"
            android:layout_alignParentStart="true"
            android:text="@string/reminder_name_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reminder_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_name_label"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:hint="@string/reminder_name_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/reminder_frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_edit_text"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/frequency"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/frequency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_edit_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/reminder_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_frequency_label"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/reminder_type"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frequency_spinner"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/select_day_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_spinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/select_days"
            android:visibility="gone"
            android:textSize="14sp" />

        <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
            android:id="@+id/select_days_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_day_error"
            app:tbgChildSpacing="auto">

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Sun"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Mon"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Tue"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Wed"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Thu"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Fri"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Sat"/>

        </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_days_toggle_group"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_time"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/set_time"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/more_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_picker"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/more_details"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <MultiAutoCompleteTextView
            android:id="@+id/additional_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/more_details_text_view"
            android:hint="@string/additional_details"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>