<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <action android:id="@+id/action_main_trackingFragment"
        app:destination="@id/trackingFragment"
        app:launchSingleTop="true" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.myandroid.sporttracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_track"
        android:name="com.myandroid.sporttracker.ui.track.TrackFragment"
        android:label="@string/title_track"
        tools:layout="@layout/fragment_track" >
        <action
            android:id="@+id/action_nav_track_to_trackingFragment"
            app:destination="@id/trackingFragment" />
        <action
            android:id="@+id/action_nav_track_to_trackPerDayFragment"
            app:destination="@id/trackPerDayFragment" />
    </fragment>

    <fragment
        android:id="@+id/trackPerDayFragment"
        android:name="com.myandroid.sporttracker.ui.track.TrackPerDayFragment"
        android:label="@string/title_track"
        tools:layout="@layout/fragment_track_per_day_list" >
        <action
            android:id="@+id/action_trackPerDayFragment_to_nav_track"
            app:destination="@id/nav_track" />
        <action
            android:id="@+id/action_trackPerDayFragment_to_trackDetails"
            app:destination="@id/trackDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/trackDetailsFragment"
        android:name="com.myandroid.sporttracker.ui.track.TrackDetailsFragment"
        android:label="@string/title_track"
        tools:layout="@layout/fragment_track_details" >
        <action
            android:id="@+id/action_details_to_list"
            app:destination="@id/trackPerDayFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.myandroid.sporttracker.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_nav_schedule_to_scheduleAddFragment"
            app:destination="@id/scheduleAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/trackingFragment"
        android:name="com.myandroid.sporttracker.ui.tracking.TrackingFragment"
        android:label="TrackingFragment" >
        <action
            android:id="@+id/action_trackingFragment_to_nav_track"
            app:destination="@id/nav_track" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.myandroid.sporttracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/scheduleAddFragment"
        android:name="com.myandroid.sporttracker.ui.schedule.ScheduleAddFragment"
        android:label="ScheduleAddFragment" >
        <action
            android:id="@+id/action_scheduleAddFragment_to_nav_schedule"
            app:destination="@id/nav_schedule" />
    </fragment>
</navigation>